--- a/exemplo.env
+++ b/exemplo.env
@@ -5,4 +5,4 @@ MYSQL_USER=nextcloud
 REDIS_HOST=redis
 NEXTCLOUD_ADMIN_USER=admin
 NEXTCLOUD_ADMIN_PASSWORD=supersecret
-NEXTCLOUD_TRUSTED_DOMAINS=localhost ${TRAEFIK_DOMAIN}
+NEXTCLOUD_TRUSTED_DOMAINS=drive.exemplo.com.br
